# teamsheets

./: .env.example  .gitignore  Dockerfile  README.md  app.py  build.sh  debug_spond_api.py  debug_spond_link.py  docker-compose.yml  init_alias_table.py  main.py  migrate_db.py  models.py  pyproject.toml  runserver.sh  seeds.py
.PROJECT/: DEPLOYMENT_GUIDE.md  SPECIFICATION.md  TODO.md  Teams SRUFC 2025.xlsx
_agents/workflows/: deploy.md  upgrade.md
backend/: Dockerfile  app.py  create_admin.py  db.sqlite3  debug_match_25.py  debug_match_update.py  debug_result_logic.py  manage.py  migrate_spond.py  models.py  test_bulk_score.py
backend/api/: authentication.py  models.py  permissions.py  serializers.py  urls.py
backend/backup/: db.sqlite3
backend/config/: settings.py  urls.py
backend/core/: middleware.py
backend/services/: oauth_service.py  spond_service.py  sync_service.py
backend/staticfiles/: index.html
backend/templates/: index.html
backend_django/: db.sqlite3  debug_match_500.py  debug_match_team.py  debug_nested_serialization.py  debug_patch_serializer.py  debug_permissions.py  debug_team_seasons_response.py  fix_existing_results.py  manage.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
services/: oauth_service.py  sheets_service.py  sync_service.py
templates/: LoginScreen.js  index.html
test_scripts/: add_column.py  check_match_25.py  debug_availability.py  debug_format.py  debug_spond_members.py
tools/: redirect_server.py
(+63 files in other folders)
