[project]
name = "teamsheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "pillow>=10.0.0",
    "gunicorn>=21.0.0",
    "flask-session>=0.5.0",
    "python-dotenv>=1.0.0"
]
